# ChangeLog for x11-plugins/pidgin-hotkeys
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-hotkeys/ChangeLog,v 1.9 2008/01/07 05:05:31 tester Exp $

  07 Jan 2008; <tester@gentoo.org> pidgin-hotkeys-0.2.3.ebuild:
  Add dep on gtk (and check that pidgin has it too)

  26 Oct 2007; Seemant Kulleen <seemant@gentoo.org>
  pidgin-hotkeys-0.2.3.ebuild:
  change description to say pidgin instead of gaim

  28 Sep 2007; nixnut <nixnut@gentoo.org> pidgin-hotkeys-0.2.3.ebuild:
  Stable on ppc wrt bug 189781

  28 Aug 2007; nixnut <nixnut@gentoo.org> pidgin-hotkeys-0.2.3.ebuild:
  Added ~ppc wrt bug 189781

  26 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  pidgin-hotkeys-0.2.3.ebuild:
  Marked stable on amd64 as per bug 189781.

  24 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  pidgin-hotkeys-0.2.3.ebuild:
  stable x86, bug 189781

  23 Aug 2007; Jeroen Roovers <jer@gentoo.org> pidgin-hotkeys-0.2.3.ebuild:
  Stable for HPPA (bug #189781).

  26 Oct 2007; Seemant Kulleen <seemant@gentoo.org>
  pidgin-hotkeys-0.2.3.ebuild:
  change description to say pidgin instead of gaim

*pidgin-hotkeys-0.2.3 (26 May 2007)

  26 May 2007; Olivier Crête <tester@gentoo.org> +metadata.xml,
  +pidgin-hotkeys-0.2.3.ebuild:
  Add continuation of gaim-hotkeys
