@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/pidgin-latex
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-latex/ChangeLog,v 1.5 2008/01/07 05:00:37 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-latex/ChangeLog,v 1.6 2008/01/07 23:11:30 tester Exp $
+
+  07 Jan 2008; <tester@gentoo.org> pidgin-latex-1.0.ebuild:
+  Add missing inherit eutils for built_with_use
 
   07 Jan 2008; <tester@gentoo.org> pidgin-latex-1.0.ebuild:
   Add dep on gtk (and check that pidgin has it too)
